--- a/PlanetCruiser/PlanetCruiser.vcxproj.filters
+++ b/PlanetCruiser/PlanetCruiser.vcxproj.filters
@@ -17,6 +17,9 @@
     <ClCompile Include="Player.cpp">
       <Filter>Obj</Filter>
     </ClCompile>
+    <ClCompile Include="BackGround.cpp">
+      <Filter>Obj</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Common.h" />
@@ -33,6 +36,9 @@
       <Filter>Scene</Filter>
     </ClInclude>
     <ClInclude Include="Player.h">
+      <Filter>Obj</Filter>
+    </ClInclude>
+    <ClInclude Include="BackGround.h">
       <Filter>Obj</Filter>
     </ClInclude>
   </ItemGroup>
