--- a/PlanetCruiser/PlanetCruiser.vcxproj
+++ b/PlanetCruiser/PlanetCruiser.vcxproj
@@ -88,6 +88,7 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
+      <ShowIncludes>true</ShowIncludes>
     </ClCompile>
     <Link>
       <AdditionalDependencies>d3dx9.lib;d3d9.lib;dxguid.lib;dinput8.lib;dsound.lib;winmm.lib;Xinput.lib;myLib.lib;%(AdditionalDependencies)</AdditionalDependencies>
@@ -108,6 +109,7 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
+      <ShowIncludes>true</ShowIncludes>
     </ClCompile>
     <Link>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
@@ -135,7 +137,6 @@
     <ClCompile Include="EndlessSystem.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="MainScene.cpp" />
-    <ClCompile Include="ObjBase.h" />
     <ClCompile Include="Pattern.cpp" />
     <ClCompile Include="PatternManager.cpp" />
     <ClCompile Include="Player.cpp" />
