--- a/PlanetCruiser/PlanetCruiser.vcxproj
+++ b/PlanetCruiser/PlanetCruiser.vcxproj
@@ -135,6 +135,7 @@
     <ClCompile Include="Asteroid.cpp" />
     <ClCompile Include="Background.cpp" />
     <ClCompile Include="EndlessSystem.cpp" />
+    <ClCompile Include="PushSpaceKey.cpp" />
     <ClCompile Include="ResultBackground.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="MainScene.cpp" />
@@ -152,6 +153,7 @@
     <ClInclude Include="Background.h" />
     <ClInclude Include="Common.h" />
     <ClInclude Include="EndlessSystem.h" />
+    <ClInclude Include="PushSpaceKey.h" />
     <ClInclude Include="ResultBackground.h" />
     <ClInclude Include="MainScene.h" />
     <ClInclude Include="MassageManager.h" />
