--- a/PlanetCruiser/Assets/pattern3.ini
+++ b/PlanetCruiser/Assets/pattern3.ini
@@ -1,52 +1,58 @@
 [Header]
-AsteroidNum = 7
+AsteroidNum = 8
 
 [Asteroid1]
-X座標 = 525
-Y座標 = 1075
+X座標 = 155
+Y座標 = 210
 スピード = 1.8
 拡縮率 = 1.0
 種類 = NORMAL
 
 [Asteroid2]
-X座標 = 100
-Y座標 = 1010
-スピード = 2.3
+X座標 = 230
+Y座標 = 525
+スピード = 1.8
 拡縮率 = 1.0
-種類 = SLENDER
+種類 = NORMAL
 
 [Asteroid3]
-X座標 = 88
-Y座標 = 250
-スピード = 2.3
+X座標 = 120
+Y座標 = 650
+スピード = 1.8
 拡縮率 = 1.0
-種類 = WIDE
+種類 = NORMAL
 
 [Asteroid4]
-X座標 = 475
-Y座標 = 875
+X座標 = 10
+Y座標 = 775
 スピード = 1.8
 拡縮率 = 1.0
 種類 = NORMAL
 
 [Asteroid5]
-X座標 = 425
+X座標 = 470
 Y座標 = 700
-スピード = 1.8
+スピード = 2.2
 拡縮率 = 1.0
-種類 = NORMAL
+種類 = SLENDER
 
 [Asteroid6]
-X座標 = 410
-Y座標 = 510
+X座標 = 430
+Y座標 = 1220
 スピード = 1.8
 拡縮率 = 1.0
-種類 = NORMAL
+種類 = SLENDER
 
 [Asteroid7]
-X座標 = 575
-Y座標 = 325
-スピード = 1.8
+X座標 = 510
+Y座標 = 990
+スピード = 2.0
 拡縮率 = 1.0
-種類 = NORMAL
+種類 = SLENDER
 
+[Asteroid8]
+X座標 = 125
+Y座標 = 1075
+スピード = 1.9
+拡縮率 = 1.0
+種類 = WIDE
