--- a/PlanetCruiser/Assets/pattern5.ini
+++ b/PlanetCruiser/Assets/pattern5.ini
@@ -1,37 +1,58 @@
 [Header]
-AsteroidNum = 5
+AsteroidNum = 8
 
 [Asteroid1]
-X座標 = 125
-Y座標 = 325
+X座標 = 155
+Y座標 = 210
 スピード = 1.8
 拡縮率 = 1.0
 種類 = NORMAL
 
 [Asteroid2]
-X座標 = 60
-Y座標 = 660
-スピード = 1.65
+X座標 = 230
+Y座標 = 525
+スピード = 1.8
 拡縮率 = 1.0
 種類 = NORMAL
 
 [Asteroid3]
-X座標 = 310
-Y座標 = 835
+X座標 = 120
+Y座標 = 650
+スピード = 1.8
+拡縮率 = 1.0
+種類 = NORMAL
+
+[Asteroid4]
+X座標 = 10
+Y座標 = 775
+スピード = 1.8
+拡縮率 = 1.0
+種類 = NORMAL
+
+[Asteroid5]
+X座標 = 470
+Y座標 = 700
+スピード = 2.2
+拡縮率 = 1.0
+種類 = SLENDER
+
+[Asteroid6]
+X座標 = 430
+Y座標 = 1220
 スピード = 1.8
 拡縮率 = 1.0
 種類 = SLENDER
 
-[Asteroid4]
-X座標 = 520
-Y座標 = 430
-スピード = 1.65
+[Asteroid7]
+X座標 = 510
+Y座標 = 990
+スピード = 2.0
 拡縮率 = 1.0
 種類 = SLENDER
 
-[Asteroid5]
-X座標 = 580
-Y座標 = 1085
-スピード = 1.65
+[Asteroid8]
+X座標 = 125
+Y座標 = 1075
+スピード = 1.9
 拡縮率 = 1.0
 種類 = WIDE
