--- a/PlanetCruiser/Assets/pattern6.ini
+++ b/PlanetCruiser/Assets/pattern6.ini
@@ -1,44 +1,45 @@
 [Header]
-AsteroidNum = 5
+AsteroidNum = 6
 
 [Asteroid1]
-X座標 = 98
-Y座標 = 58
+X座標 = 475
+Y座標 = 500
 スピード = 1.8
 拡縮率 = 1.0
-種類 = NORMAL
+種類 = WIDE
 
 [Asteroid2]
-X座標 = 105
-Y座標 = 1225
-スピード = 1.8
+X座標 = 210
+Y座標 = 1040
+スピード = 2.0
 拡縮率 = 1.0
-種類 = NORMAL
+種類 = SLENDER
 
 [Asteroid3]
-X座標 = 210
-Y座標 = 485
-スピード = 2.0
+X座標 = 480
+Y座標 = 1050
+スピード = 1.7
 拡縮率 = 1.0
 種類 = SLENDER
 
 [Asteroid4]
-X座標 = 540
-Y座標 = 995
+X座標 = 125
+Y座標 = 825
+スピード = 1.8
+拡縮率 = 1.0
+種類 = NORMAL
+
+[Asteroid5]
+X座標 = 560
+Y座標 = 200
 スピード = 1.8
 拡縮率 = 1.0
 種類 = SLENDER
 
-[Asteroid5]
-X座標 = 535
-Y座標 = 745
-スピード = 2.0
-拡縮率 = 1.0
-種類 = WIDE
-
-[Asteroid5]
-X座標 = 610
-Y座標 = 210
+[Asteroid6]
+X座標 = 100
+Y座標 = 425
 スピード = 1.8
 拡縮率 = 1.0
-種類 = WIDE
+種類 = NORMAL
+
