スクロール速度の修正

--- a/PlanetCruiser/Stage/pattern10.ini
+++ b/PlanetCruiser/Stage/pattern10.ini
@@ -2,64 +2,64 @@
 AsteroidNum = 9
 
 [Asteroid1]
-X座標 = 525
-Y座標 = 75
+X座標 = 75
+Y座標 = 80
 スピード = 1.8
 拡縮率 = 1.0
 種類 = NORMAL
 
 [Asteroid2]
-X座標 = 515
-Y座標 = 600
+X座標 = 325
+Y座標 = 780
 スピード = 1.8
 拡縮率 = 1.0
 種類 = NORMAL
 
 [Asteroid3]
-X座標 = 20
-Y座標 = 650
+X座標 = -10
+Y座標 = 950
 スピード = 1.8
 拡縮率 = 1.0
 種類 = NORMAL
 
 [Asteroid4]
-X座標 = 225
-Y座標 = 1230
+X座標 = 270
+Y座標 = 355
 スピード = 1.8
 拡縮率 = 1.0
-種類 = NORMAL
+種類 = SLENDER
 
 [Asteroid5]
-X座標 = 255
-Y座標 = 935
-スピード = 2.3
+X座標 = 210
+Y座標 = 585
+スピード = 1.8
 拡縮率 = 1.0
 種類 = SLENDER
 
 [Asteroid6]
-X座標 = 385
-Y座標 = 750
-スピード = 1.8
+X座標 = 520
+Y座標 = 1050
+スピード = 1.5
 拡縮率 = 1.0
 種類 = SLENDER
 
 [Asteroid7]
-X座標 = 95
-Y座標 = 240
-スピード = 1.8
+X座標 = 190
+Y座標 = 1050
+スピード = 2.2
 拡縮率 = 1.0
 種類 = WIDE
 
 [Asteroid8]
-X座標 = 270
-Y座標 = 355
+X座標 = 210
+Y座標 = 1260
 スピード = 1.8
 拡縮率 = 1.0
 種類 = WIDE
 
 [Asteroid9]
-X座標 = 60
-Y座標 = 1125
+X座標 = 480
+Y座標 = 240
 スピード = 1.8
 拡縮率 = 1.0
 種類 = WIDE
