--- a/PlanetCruiser/Stage/pattern7.ini
+++ b/PlanetCruiser/Stage/pattern7.ini
@@ -1,16 +1,73 @@
 [Header]
-AsteroidNum = 2
+AsteroidNum = 10
 
 [Asteroid1]
-X座標 = 100
-Y座標 = 700
-スピード = 1.0
+X座標 = 0
+Y座標 = 50
+スピード = 1.8
 拡縮率 = 1.0
 種類 = NORMAL
 
 [Asteroid2]
-X座標 = 300
-Y座標 = 1000
+X座標 = 80
+Y座標 = 190
+スピード = 1.8
+拡縮率 = 1.0
+種類 = NORMAL
+
+[Asteroid3]
+X座標 = 160
+Y座標 = 330
+スピード = 1.8
+拡縮率 = 1.0
+種類 = NORMAL
+
+[Asteroid4]
+X座標 = 550
+Y座標 = 910
 スピード = 2.0
-拡縮率 = 1.5
+拡縮率 = 1.0
+種類 = NORMAL
+
+[Asteroid5]
+X座標 = 470
+Y座標 = 1050
+スピード = 2.0
+拡縮率 = 1.0
+種類 = NORMAL
+
+[Asteroid6]
+X座標 = 390
+Y座標 = 1190
+スピード = 2.0
+拡縮率 = 1.0
+種類 = NORMAL
+
+[Asteroid7]
+X座標 = 180
+Y座標 = 1000
+スピード = 2.2
+拡縮率 = 1.0
 種類 = SLENDER
+
+[Asteroid8]
+X座標 = 275
+Y座標 = 660
+スピード = 1.8
+拡縮率 = 1.0
+種類 = WIDE
+
+[Asteroid9]
+X座標 = 550
+Y座標 = 150
+スピード = 1.5
+拡縮率 = 1.0
+種類 = WIDE
+
+[Asteroid10]
+X座標 = 100
+Y座標 = 1250
+スピード = 1.8
+拡縮率 = 1.0
+種類 = WIDE
+
