--- a/PlanetCruiser/Stage/pattern8.ini
+++ b/PlanetCruiser/Stage/pattern8.ini
@@ -1,16 +1,72 @@
 [Header]
-AsteroidNum = 2
+AsteroidNum = 10
 
 [Asteroid1]
-X座標 = 100
-Y座標 = 700
-スピード = 1.0
+X座標 = 320
+Y座標 = 600
+スピード = 1.8
 拡縮率 = 1.0
 種類 = NORMAL
 
 [Asteroid2]
-X座標 = 300
-Y座標 = 1000
-スピード = 2.0
-拡縮率 = 1.5
+X座標 = 225
+Y座標 = 710
+スピード = 1.8
+拡縮率 = 1.0
+種類 = NORMAL
+
+[Asteroid3]
+X座標 = 330
+Y座標 = 820
+スピード = 1.8
+拡縮率 = 1.0
+種類 = NORMAL
+
+[Asteroid4]
+X座標 = 235
+Y座標 = 930
+スピード = 1.8
+拡縮率 = 1.0
+種類 = NORMAL
+
+[Asteroid5]
+X座標 = 510
+Y座標 = 350
+スピード = 2.2
+拡縮率 = 1.0
 種類 = SLENDER
+
+[Asteroid6]
+X座標 = 45
+Y座標 = 1225
+スピード = 1.8
+拡縮率 = 1.0
+種類 = SLENDER
+
+[Asteroid7]
+X座標 = 45
+Y座標 = 450
+スピード = 2.25
+拡縮率 = 1.0
+種類 = WIDE
+
+[Asteroid8]
+X座標 = 310
+Y座標 = 180
+スピード = 1.8
+拡縮率 = 1.0
+種類 = WIDE
+
+[Asteroid9]
+X座標 = 540
+Y座標 = 1140
+スピード = 1.8
+拡縮率 = 1.0
+種類 = WIDE
+
+[Asteroid10]
+X座標 = 375
+Y座標 = 1255
+スピード = 1.8
+拡縮率 = 1.0
+種類 = WIDE
