--- a/PlanetCruiser/Stage/pattern5.ini
+++ b/PlanetCruiser/Stage/pattern5.ini
@@ -1,58 +1,72 @@
 [Header]
-AsteroidNum = 8
+AsteroidNum = 10
 
 [Asteroid1]
-X座標 = 155
-Y座標 = 210
-スピード = 1.8
+X座標 = 130
+Y座標 = 450
+スピード = 2.0
 拡縮率 = 1.0
 種類 = NORMAL
 
 [Asteroid2]
-X座標 = 230
-Y座標 = 525
-スピード = 1.8
+X座標 = 5
+Y座標 = 300
+スピード = 1.85
 拡縮率 = 1.0
 種類 = NORMAL
 
 [Asteroid3]
-X座標 = 120
-Y座標 = 650
-スピード = 1.8
+X座標 = 60
+Y座標 = 700
+スピード = 1.65
 拡縮率 = 1.0
 種類 = NORMAL
 
 [Asteroid4]
-X座標 = 10
-Y座標 = 775
-スピード = 1.8
+X座標 = 310
+Y座標 = 920
+スピード = 2.35
 拡縮率 = 1.0
-種類 = NORMAL
+種類 = SLENDER
 
 [Asteroid5]
-X座標 = 470
-Y座標 = 700
-スピード = 2.2
+X座標 = 510
+Y座標 = 490
+スピード = 1.8
 拡縮率 = 1.0
 種類 = SLENDER
 
 [Asteroid6]
-X座標 = 430
-Y座標 = 1220
-スピード = 1.8
+X座標 = 120
+Y座標 = 90
+スピード = 1.85
 拡縮率 = 1.0
-種類 = SLENDER
+種類 = WIDE
 
 [Asteroid7]
-X座標 = 510
-Y座標 = 990
-スピード = 2.0
+X座標 = 490
+Y座標 = 300
+スピード = 1.8
 拡縮率 = 1.0
-種類 = SLENDER
+種類 = WIDE
 
 [Asteroid8]
-X座標 = 125
-Y座標 = 1075
+X座標 = 550
+Y座標 = 1175
 スピード = 1.9
 拡縮率 = 1.0
 種類 = WIDE
+
+[Asteroid9]
+X座標 = 135
+Y座標 = 1235
+スピード = 1.8
+拡縮率 = 1.0
+種類 = WIDE
+
+[Asteroid10]
+X座標 = 310
+Y座標 = 1030
+スピード = 2.15
+拡縮率 = 1.0
+種類 = NORMAL
