--- a/PlanetCruiser/PlanetCruiser.vcxproj
+++ b/PlanetCruiser/PlanetCruiser.vcxproj
@@ -140,7 +140,7 @@
     <ClCompile Include="ResultBackground.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="MainScene.cpp" />
-    <ClCompile Include="MassageManager.cpp" />
+    <ClCompile Include="MessageManager.cpp" />
     <ClCompile Include="Pattern.cpp" />
     <ClCompile Include="PatternManager.cpp" />
     <ClCompile Include="Player.cpp" />
@@ -161,7 +161,7 @@
     <ClInclude Include="PushSpaceKey.h" />
     <ClInclude Include="ResultBackground.h" />
     <ClInclude Include="MainScene.h" />
-    <ClInclude Include="MassageManager.h" />
+    <ClInclude Include="MessageManager.h" />
     <ClInclude Include="Pattern.h" />
     <ClInclude Include="PatternManager.h" />
     <ClInclude Include="Player.h" />
